--- a/Proyecto final-web/index.html
+++ b/Proyecto final-web/index.html
@@ -51,7 +51,7 @@
                         <li class="active"><a href="index.html">Inicio</a></li>
                         <li><a href="nosotros.html">Nosotros</a></li>
                         <li><a href="servicios.html">Servicios</a></li>
-                        <li><a href="contacto.html">Contacto</a></li>
+                        <li><a href="contacto.html">Contactanos</a></li>
                     </ul>
                 </nav>
 
@@ -64,7 +64,7 @@
             <div class="container">
                 <h1 class="display-4 wow bounceIn">Diseño y Elaboracion de Prendas</h1>
                 <p class="wow bounceIn" data-wow-delay=".3s">Creamos Prendas según las necesidades y requerimientos de nuestros clientes.</p>
-                <a href="contacto.html" class="btn btn-primary btn-lg">Ponte en contacto</a>
+                <a href="contacto.html" class="btn btn-primary btn-lg">contactanos</a>
             </div>
 
         </div>
@@ -82,7 +82,7 @@
 
                 <div class="col-md-8 col-xl-9 wow bounceIn" data-wow-delay=".3s">
                     <h2 class="h3 text-xs-center text-md-left font-weight-bold">Agencia de confeccion</h2>
-                    <p>MODDA te asesora en el elaboracion y el diseño que usted elija de acuerdo a la temporada y que su produscto salga a la luz. Ponemos a tu disposición las mejores herramientas del mundo de la moda.</p>
+                    <p>MODDA te asesora en el elaboracion y el diseño que usted elija de acuerdo a la temporada y que su producto salga a la luz. Ponemos a tu disposición las mejores herramientas del mundo de la moda.</p>
                     <p>Ponemos a tu alcance un servicio adaptado a tus necesidades, desde una consultoría integral con supervisión de todos y cada uno de los pasos que has de seguir para crear un negocio actual (comunicación, diseño corporativo, tecnologías...) a productos adaptados a metodologías ágiles de creación de diseñadas por nosotros y avaladas por nuestros años de experiencia.</p>
 
                 </div>
@@ -167,7 +167,7 @@
 
             <div class="row">
                 <article class="col-md-4 wow bounceInLeft" data-wow-delay=".10s">
-                    <img src="images/proyecto1.jpg" alt="Servicio Desarrollo de Aplicaciones Mobiles" class="gorra">
+                    <img src="images/proyecto3.jpg" alt="Servicio Desarrollo de Aplicaciones Mobiles" class="gorra">
                     <h3><a href="#">Zapatillas </a></h3>
                     <p class="hidden-sm-down">Desarrollamos zapatiillas con estampados motivos y mas. Nuestra principal cualidad está en el desarrollo de zapatillas a medida de tus necesidades.</p>
                     <a href="#" class="btn btn-secondary hidden-sm-down">Más información</a>
@@ -175,14 +175,14 @@
                 </article>
 
                 <article class="col-md-4 wow bounceInUp" data-wow-delay=".3s">
-                    <img src="images/proyecto3.jpg" alt="Servicio Consultoría Tecnológica">
+                    <img src="images/proyecto2.jpg" alt="Servicio Consultoría Tecnológica">
                     <h3><a href="#">Gorras</a></h3>
                     <p class="hidden-sm-down">Ofrecemos consultoría y elaboracion, necesaria previo al desarrollo de cualquier proyecto.</p>
                     <a href="#" class="btn btn-secondary hidden-sm-down">Más información</a>
                 </article>
 
                 <article class="col-md-4 wow bounceInRight" data-wow-delay="1s">
-                    <img src="images/proyecto2.jpg" alt="Servicio Marketing y publicidad Movil">
+                    <img src="images/proyecto14.jpg" alt="Servicio Marketing y publicidad Movil">
                     <h3><a href="#">Bestidos</a></h3>
                     <p class="hidden-sm-down">Desarrollamos campañas publicitarias para tus modelos. Hacemos conocer tu marca en el momento exacto para conseguir un mayor inpacto.</p>
                     <a href="#" class="btn btn-secondary hidden-sm-down">Más información</a>
@@ -199,32 +199,32 @@
 
             <div class="owl-carousel">
                 <a href="#">
-                    <h4>Corbatas</h4>
+                    <h4>Gorras</h4>
                     <img src="images/proyecto1.jpg" alt="App Lima Travels">
                 </a>
 
                 <a href="#">
-                    <h4>Mochilas</h4>
+                    <h4>Gorras invierno</h4>
                     <img src="images/proyecto2.jpg" alt="Apps Uber">
                 </a>
 
                 <a href="#">
-                    <h4>Camisas</h4>
+                    <h4>Zapatillas</h4>
                     <img src="images/proyecto3.jpg" alt="App Pizza Perú">
                 </a>
 
                 <a href="#">
-                    <h4>Gorra</h4>
+                    <h4>Relog</h4>
                     <img src="images/proyecto4.jpg" alt="App Muebles Hoy">
                 </a>
 
                 <a href="#">
-                    <h4>Zapatillas</h4>
+                    <h4>Mochila</h4>
                     <img src="images/proyecto5.jpg" alt="App Clima Perú">
                 </a>
 
                 <a href="#">
-                    <h4>Relog</h4>
+                    <h4>Perfumes</h4>
                     <img src="images/proyecto6.jpg" alt="App  Playa">
                 </a>
 
@@ -236,7 +236,7 @@
         <div class="container">
             <p>2016 © Modda Todos los derechos reservados</p>
             <ul class="redes-sociales">
-                <li><a href="#"><i class="fa fa-facebook"> </i>  </a></li>
+                <li><a href="https://www.facebook.com/rafael.valdiviezoancajima.3"><i class="fa fa-facebook"> </i>  </a></li>
                 <li><a href="#"><i class="fa fa-twitter"></i> </a></li>
                 <li><a href="#"><i class="fa fa-youtube"></i> </a></li>
             </ul>
